--- a/investigacióndeusuario.html
+++ b/investigacióndeusuario.html
@@ -34,11 +34,32 @@
                     por medio de estos, se conoce y comprende los comportamientos cruciales de los usuarios; 
                     todo con el fin general de esta área, que se basa en entregar una experiencia gratificante al usuario.</p>
             </div>
+
+            <div class="container-fluid" id="reactangulo">
+                <h2>DOBLEDIAMANTE</h2>
+                <p>A continuación, se muestra el modelo de doble diamante el cual toma 4 fases y 
+                    las estructura para que de esta forma, facilite y ayude en la identificación de 
+                    problemas, cuestionamientos que por consiguiente se puede lograr buscar soluciones 
+                    mediante la diversidad de ideas y procesos investigativos. Estas 4 fases son: Descubrir - 
+                    Definir - Desarrollar - Entregar.
+                    </p>
+                <div class="container-img">
+                    <img src="img/Doble diamante.png" width="600px">
+                </div>
+            </div>
+
             <div class="container-fluid" id="reactangulo">
                 <h2>¿COMO CONOCER AL USUARIO?</h2>
+                <p>En las primeras etapas del doble diamante, nos encontramos con la de descubrir y definir. Para exteriorizar,
+                     desde la fase de descubrir, es donde se recopila información mediante la investigación y observación. De 
+                     esta forma conocemos el territorio tecnológico, social y económico.
+                    Dentro de los tipos de información, contamos con datos cuantitativos y cualitativos. Aquellos nos permiten 
+                    desarrollar esta etapa generativa en la que nos encontramos, donde podemos ir desde entrevistas, encuestas, 
+                    a estadísticas, feedbacks, etc. De esta manera se explora y empatiza con los usuarios.
+                    </p>
                 <div class="container-img">
                   <img src="img/paso1comoconoceralusuario.png" width="250px">
-                  <img src="img/paso2acomoconoceralusuario.png"width="250px" > 
+                  <img src="img/paso2acomoconoceralusuario.png"width="250px"> 
                 </div>
                 <div class="container-imagen">
                     <img src="img/paso3comoconoceralusuario.png" width="250px">
@@ -46,17 +67,17 @@
                   </div>
                 </div>
             
-            <div class="container-fluid" id="reactangulo">
-                <h2>DOBLEDIAMANTE</h2>
-                <div class="row justify-content-center">
-                    <div class="cuadrado"></div>
-                </div>
-            </div>
 
             <div class="container-fluid" id="reactangulo">
                 <h2>DISEÑAR UNA SOLUCIÓN</h2>
-                <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                    Ut enin ad ninin venian, quis nostrun exercitationen.</p>
+                <p>El segundo diamante refiere todo los objetivos de desarrollo por los cuales se somete la ideación de la solución a las 
+                    problemáticas, observaciones, que surgen en una primera instancia. En esta fase se trabaja con prototipos y se realizan
+                     procesos evaluativos, repetitivos, para estudiar el funcionamiento y mejorar ideas. En este transcurso se involucran 
+                     usuarios para obtener comentarios, y de esta forma asegurar que las soluciones son efectivas, viables y funcionales.
+                    Luego de ejecutar los últimos detalles, se realizan las últimas pruebas y ajustes finales para luego hacer entrega del
+                     servicio a los usuarios a quienes va dirigido. Posterior al lanzamiento, se hace un seguimiento al producto o servicio 
+                     para garantizar que este cumpla con los objetivos propuestos.
+                    </p>
                     <div class="container-img">
                         <img src="img/2.3.3   Diseñar una Solución.png" width="600px">
                       </div>
