implementación de graficas

--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -56,7 +56,7 @@
         <div class="contenido-oculto row container_doble justify-content-between" id="contenido-1">
             <h2>DISEÑO INDUSTRIAL</h2>
             <div class="col-5">
-                <img src="img/Diseno_Industrial.png" id="imagen_industrial">
+                <img src="img/3. Campo Laboral DISEÑO UX.png" id="imagen_industrial">
             </div>
             <div class="col-7">
                 <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
