--- a/patrones.html
+++ b/patrones.html
@@ -46,7 +46,7 @@
                 <h2>Ejemplo 1 : Carrito de Compras</h2>
 
                     <div class="container-img">
-                        <img src="img/Ej. Ilustrados - Carrito de Compras [Recuperado].png" width="600px">
+                        <img src="img/Ej. Ilustrados - Carrito de Compras [Recuperado].png" width="600px" id="center">
                     </div>
                 </div>
 
@@ -62,7 +62,7 @@
                         <h2>Ejemplo 3 : Menú Desplegable</h2>
         
                             <div class="container-img">
-                                <img src="img/Menú Desplegable.png" width="600px">
+                                <img src="img/Menú Desplegable.png" width="600px" id="center">
                             </div>
                         </div>
 
