--- a/nav/nav.html
+++ b/nav/nav.html
@@ -4,6 +4,23 @@
         <div class="d-flex"> 
             <!-- Acerca de -->
             <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_acerca">CONCEPTOS</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="../quienes_somos.html">UI</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../que_buscamos.html">DISEÑO</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../quienes_somos.html">UX</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../quienes_somos.html">PATRONES OSCUROS</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../quienes_somos.html">PATRONES</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../quienes_somos.html">CAMPO LABORAL</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_acerca">ACERCA DE</a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="../quienes_somos.html">¿Quiénes somos? </a></li>
