barra de navegación

--- a/nav/nav.html
+++ b/nav/nav.html
@@ -6,17 +6,17 @@
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_acerca">CONCEPTOS</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="../quienes_somos.html">UI</a></li>
+                    <li><a class="dropdown-item" onclick="scrollToTarget('diseño')">UI</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="../que_buscamos.html">DISEÑO</a></li>
+                    <li><a class="dropdown-item" onclick="scrollToTarget('tipos')">DISEÑO</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="../quienes_somos.html">UX</a></li>
+                    <li><a class="dropdown-item" onclick="scrollToTarget('diseño')">UX</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="../quienes_somos.html">PATRONES OSCUROS</a></li>
+                    <li><a class="dropdown-item" onclick="scrollToTarget('franja_2')">PATRONES OSCUROS</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="../quienes_somos.html">PATRONES</a></li>
+                    <li><a class="dropdown-item" onclick="scrollToTarget('franja_2')">PATRONES</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="../quienes_somos.html">CAMPO LABORAL</a></li>
+                    <li><a class="dropdown-item" onclick="scrollToTarget('campo_laboral')">CAMPO LABORAL</a></li>
                 </ul>
             </div>
 
