cuadros de patornes oscuros
a

--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -83,6 +83,10 @@
                     <div class="loader-text">Dark patterns, desviación de la atención del usuario de las cosas importantes</div>
                 </div>
             </div>
+            <h3>CASO DE ESTUDIO</h3>
+            <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
+            <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo12"></div>
+                <div class="loader-container"></div>
         </div>
 
         <!-- FILA2 -->
@@ -130,6 +134,10 @@
                     </div>
                 </div>
             </div>
+            <h3>CASO DE ESTUDIO</h3>
+            <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
+            <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo22"></div>
+                <div class="loader-container"></div>
         </div>
 
         <!-- FILA3 -->
@@ -155,10 +163,14 @@
             <h3>CASO DE ESTUDIO</h3>
             <!-- cuadrado -->
             <!-- botón de aceptar sea grande y el contenido textual pequeño y botón de no tocar que cambie al hacer click-->
-            <div class="container d-flex align-items-center justify-content-center " id="cuadro_interactivo1">
+            <div class="container d-flex align-items-center justify-content-center " id="cuadro_interactivo3">
                 <button style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='complementos/oscurecimientoprivacidad.html';">¿Deseas cancelar tu suscripción?</button>
 
             </div>
+            <h3>CASO DE ESTUDIO</h3>
+            <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
+            <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo32"></div>
+                <div class="loader-container"></div>
         </div>
 
                 
@@ -202,6 +214,10 @@
                     </div>     
                 </div> 
             </div>
+            <h3>CASO DE ESTUDIO</h3>
+            <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
+            <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo42"></div>
+                <div class="loader-container"></div>
         </div>   
         <!-- FILA 5 -->
         <div class="row container_tiple display-flex" id="bock_click5">
@@ -227,6 +243,10 @@
                 <div class="container d-flex align-items-center justify-content-center" id="cuadro_interactivo5">
                     <button style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='complementos/suscripcion.html';">¡Haz clic aquí para recibir una suscripción gratis!</button>
                 </div>
+        <h3>CASO DE ESTUDIO</h3>
+        <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
+        <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo52"></div>
+            <div class="loader-container"></div>
         </div>
 
         <!-- FILA6 -->
@@ -251,7 +271,7 @@
                 en la página y a largo plazo al posible arrepentimiento de usar el servicio ofrecido.</p>
             <h3>CASO DE ESTUDIO</h3>
             <!--la compra se acaba o muchos botones de descarga-->
-            <div class="container d-flex align-items-center justify-content-center " id="cuadro_interactivo4">
+            <div class="container d-flex align-items-center justify-content-center " id="cuadro_interactivo6">
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdrop-3">
                     !Haz click y resive una oferta especial!
@@ -272,6 +292,10 @@
                     </div>
                 </div> 
             </div>
+            <h3>CASO DE ESTUDIO</h3>
+            <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
+            <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo62"></div>
+                <div class="loader-container"></div>
         </div>                
 
         <!-- FILA7 -->
@@ -297,8 +321,12 @@
             <!-- botón del area del diseño que te redireccione-->
             <div class="container d-flex align-items-center justify-content-center" id="cuadro_interactivo7">
                 <button style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='complementos/anunciosdisfrazados.html';">¡Haz clic aquí para recibir INCREIBLES PREMIOS!</button>
-            </div>
-        </div>  
+            </div> 
+        <h3>CASO DE ESTUDIO</h3>
+        <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
+        <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo72"></div>
+            <div class="loader-container"></div> 
+        </div>
     </main>
     <!-- footer  -->
     <div id="footer"></div>
