--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -93,7 +93,7 @@
         
         <!-- FILA 3 -->
         <div class="row container_doble" id="bock_click3">
-            <div class="col-5">
+            <div class="col-5" id="bock_click" data-target="contenido-3">
                 <h3 class="titulo-manipulacion">DISEÑO DE INTERACCIÓN<span class="triangulo"></span></h3>
             </div>
             <div class="col-7">
