--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                             significativo a la sociedad.</p>
                         </div>
                         <div class="col-6">
+                            <a href="tiposdediseño.html">
                             <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">
+                        </a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +81,9 @@
                             el pensamiento previo a propuestas de diseño digitales que permiten la interacción entre el usuario y servicio.</p>
                         </div>
                         <div class="col-6">
+                            <a href="diseñouxyui.html">
                             <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +95,9 @@
                             damos a conocer diferentes oportunidades laborales que pueden ser de tú interés.</p>
                         </div>
                         <div class="col-6">
+                            <a href="campolaboral.html">
                             <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +109,9 @@
                             al usuario con la finalidad de obtener respuestas que se desarrollan dentro de una próxima propuesta de solución.</p>
                         </div>
                         <div class="col-6">
+                            <a href="investigacióndeusuario.html">
                             <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
+                            </a>
                         </div>
                     </div>
                 </div>
