--- a/footer/footer.html
+++ b/footer/footer.html
@@ -7,8 +7,11 @@
                     oscuros y los tipos que existen para evitar que 
                     caigan en estos.</p>
                     <img src="img/correo.png" alt="Botones del footer" id="BOTONredessociales">
-                    <img src="img/instagram.png" alt="Botones del footer" id="BOTONredessociales2">    
+                    <a class="vc_icon_element-link" href="https://www.instagram.com/archivadocs/" rel="nofollow" title="Instagram nuclio digital school" target="_blank">
+                    <img src="img/instagram.png" alt="Botones del footer" id="BOTONredessociales2">
+                    </a>    
             </div>
         </div>
     </div>
 </footer>
+
