--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -29,7 +29,7 @@
         <div class="rectangulopestaña"></div>
         <div class="container justify-content-between" id="container_principal"> 
             <!-- descripcion -->
-            <div class="container" id="containertitulo">
+            <div class="container" id="container_titulo">
                 <h1>TIPOS DE DISEÑO</h1>
                 <p>Los diferentes diseños expuestos y utilizados en la sociedad,
                        se desarrollan de acuerdo a problemáticas y observaciones que van surgiendo y que a través de procesos
@@ -41,80 +41,86 @@
         <!-- CATEGORÍAS -->        
         <h2>ÁREAS</h2>
         <!-- FILA 1 -->
-        <div class="row container_doble" id="bock_click1">
-            <div class="col-5" id="bock_click" data-target="contenido-1">
-                <h3 class="titulo-manipulacion">DISEÑO INDUSTRIAL<span class="triangulo"></span></h3>
+        <div class="row container_doble d-flex">
+            <div class="col-3" id="bock_click" data-target="contenido-1">
+                <h3>DISEÑO INDUSTRIAL<span class="triangulo"></span></h3>
             </div>
-            <div class="col-7">
+            <div class="col-9">
                 <p>Se dirige al usuario para que realice acciones no deseadas, 
                     pero que son beneficiosas para la interfaz o servicio.</p>
             </div>
         </div>
         <!-- Contenido oculto aquí -->
-        <div class="contenido-oculto row container_doble justify-content-between" id="contenido-1">
-            <h2>DISEÑO INDUSTRIAL</h2>
-            <div class="col-5">
-                <img src="img/3. Campo Laboral DISEÑO UX.png" id="imagen_industrial">
-            </div>
-            <div class="col-7">
-                <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
-                    o productos funcionales donde su objetivo principal consiste en mejorar la calidad de vida y experiencia
-                    a través de la innovación y satisfacción respecto a las necesidades específicas dentro de diversos contextos,
-                    dando énfasis a lo seguro, accesible, inclusivo y amigable con el medio ambiente. Pueden colaborar con diferentes
-                    profesionales para llevar a cabo el proceso de diseño, desde principio a fin.
-                </p>
+        <div class="container contenido-oculto justify-content-between" id="contenido-1">
+            <div class="row">
+                <h2>DISEÑO INDUSTRIAL</h2>
+                <div class="col-5">
+                    <img src="img/3. Campo Laboral DISEÑO UX.png" id="imagen_industrial">
+                </div>
+                <div class="col-7">
+                    <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
+                        o productos funcionales donde su objetivo principal consiste en mejorar la calidad de vida y experiencia
+                        a través de la innovación y satisfacción respecto a las necesidades específicas dentro de diversos contextos,
+                        dando énfasis a lo seguro, accesible, inclusivo y amigable con el medio ambiente. Pueden colaborar con diferentes
+                        profesionales para llevar a cabo el proceso de diseño, desde principio a fin.
+                    </p>
+                </div>
             </div>
         </div>
         <!-- FILA 2 -->
-        <div class="row container_doble" id="bock_click2">
-            <div class="col-5" id="bock_click" data-target="contenido-2">
-                <h3 class="titulo-manipulacion">DISEÑO GRÁFICO<span class="triangulo"></span></h3>
+        <div class="row container_doble">
+            <div class="col-3" id="bock_click" data-target="contenido-2">
+                <h3>DISEÑO GRÁFICO<span class="triangulo"></span></h3>
             </div>
-            <div class="col-7">
+            <div class="col-9">
                 <p>Se dirige al usuario para que realice acciones no deseadas, 
                     pero que son beneficiosas para la interfaz o servicio.</p>
             </div>
         </div>
-            <div class="contenido-oculto row container_doble " id="contenido-2">
-                <!-- Contenido oculto aquí -->
+        <!-- Contenido oculto aquí -->
+        <div class="container contenido-oculto justify-content-between" id="contenido-2">
+            <div class="row">
                 <h2>DISEÑO GRÁFICO</h2>
-            <div class="col-5">
-                <img src="img/Diseno_Grafico.png" id="imagen_grafico">
-            </div>
-            <div class="col-7">
-                <p>Dentro de las ramas del diseño gráfico, nos podemos introducir en disciplinas creativas donde,
-                    se combina la comunicación visual y el arte, de forma que ambos se complementan para transmitir
-                    mensajes y conceptos al público a través de imágenes, texto y otros elementos gráficos que componen
-                    un cuerpo o espacio que dispone el contenido a expresar. Los diseñadores gráficos se desenvuelven en 
-                    el área editorial, de fotografía, ilustración, etc. y requieren de fundamentos principales como la teoría del color.
-                </p>
+                <div class="col-5">
+                    <img src="img/Diseno_Grafico.png" id="imagen_grafico">
+                </div>
+                <div class="col-7">
+                    <p>Dentro de las ramas del diseño gráfico, nos podemos introducir en disciplinas creativas donde,
+                        se combina la comunicación visual y el arte, de forma que ambos se complementan para transmitir
+                        mensajes y conceptos al público a través de imágenes, texto y otros elementos gráficos que componen
+                        un cuerpo o espacio que dispone el contenido a expresar. Los diseñadores gráficos se desenvuelven en 
+                        el área editorial, de fotografía, ilustración, etc. y requieren de fundamentos principales como la teoría del color.
+                    </p>
+                </div>
             </div>
         </div>
         
         <!-- FILA 3 -->
-        <div class="row container_doble" id="bock_click3">
-            <div class="col-5" id="bock_click" data-target="contenido-3">
-                <h3 class="titulo-manipulacion">DISEÑO DE INTERACCIÓN<span class="triangulo"></span></h3>
+        <div class="row container_doble">
+            <div class="col-3" id="bock_click" data-target="contenido-3">
+                <h3>DISEÑO DE INTERACCIÓN<span class="triangulo"></span></h3>
             </div>
-            <div class="col-7">
+            <div class="col-9">
                 <p>Enfocándose en la relación e interacción de usuario y producto,
-                     el diseño de interacción dispone experiencias digitales
-                      que se concentran en ser eficientes e intuitivas.</p>
+                    el diseño de interacción dispone experiencias digitales
+                    que se concentran en ser eficientes e intuitivas.</p>
             </div>
         </div>
-        <div class="contenido-oculto row container_doble" id="contenido-3">
-            <!-- Contenido oculto aquí -->
-            <h2>DISEÑO DE INTERACCIÓN</h2>
-            <div class="col-5">
-                <img src="img/Diseno_de_Interaccion.png" id="imagen_interaccion">
-            </div>
-            <div class="col-7">
-                <p>El diseño de interacción se destaca por su enfoque en la relación entre usuario y servicio,
-                    buscando generar experiencias digitales valiosas y gratificantes. Se prioriza la creación de interfaces 
-                    intuitivas y eficientes para facilitar una navegación fluida y simple. Este tipo de diseño se observa 
-                    principalmente en aplicaciones, páginas web y software, donde se emplean conceptos como casos de estudio 
-                    o arquitectura de la información.
-                 </p>
+        <!-- Contenido oculto aquí -->
+        <div class="container contenido-oculto justify-content-between" id="contenido-3">
+            <div class="row">
+                <h2>DISEÑO DE INTERACCIÓN</h2>
+                <div class="col-5">
+                    <img src="img/Diseno_de_Interaccion.png" id="imagen_interaccion">
+                </div>
+                <div class="col-7">
+                    <p>El diseño de interacción se destaca por su enfoque en la relación entre usuario y servicio,
+                        buscando generar experiencias digitales valiosas y gratificantes. Se prioriza la creación de interfaces 
+                        intuitivas y eficientes para facilitar una navegación fluida y simple. Este tipo de diseño se observa 
+                        principalmente en aplicaciones, páginas web y software, donde se emplean conceptos como casos de estudio 
+                        o arquitectura de la información.
+                     </p>
+                </div>
             </div>
         </div>
     </main>
