--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -46,8 +46,9 @@
                 <h3>DISEÑO INDUSTRIAL<span class="triangulo"></span></h3>
             </div>
             <div class="col-9">
-                <p>Se dirige al usuario para que realice acciones no deseadas, 
-                    pero que son beneficiosas para la interfaz o servicio.</p>
+                <p>Área del diseño focalizada en el desarrollo de objetos funcionales
+                     que garantizan una mejor calidad de vida teniendo en consideración
+                      aspectos como la accesibilidad, inclusión, y compromiso con el medioambiente.</p>
             </div>
         </div>
         <!-- Contenido oculto aquí -->
@@ -57,7 +58,7 @@
                 <div class="col-5">
                     <img src="img/3. Campo Laboral DISEÑO UX.png" id="imagen_industrial">
                 </div>
-                <div class="col-7">
+                <div class="col-7 d-flex justify-content-center ali">
                     <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
                         o productos funcionales donde su objetivo principal consiste en mejorar la calidad de vida y experiencia
                         a través de la innovación y satisfacción respecto a las necesidades específicas dentro de diversos contextos,
@@ -73,8 +74,8 @@
                 <h3>DISEÑO GRÁFICO<span class="triangulo"></span></h3>
             </div>
             <div class="col-9">
-                <p>Se dirige al usuario para que realice acciones no deseadas, 
-                    pero que son beneficiosas para la interfaz o servicio.</p>
+                <p>Como extensión del lenguaje, el diseño gráfico por medio de elementos construidos en base a relaciones,
+                     de manera visual, se disponen espacios que su objetivo consiste en transmitir un mensaje.</p>
             </div>
         </div>
         <!-- Contenido oculto aquí -->
@@ -96,14 +97,13 @@
         </div>
         
         <!-- FILA 3 -->
-        <div class="row container_doble">
+        <div class="row container_doble" id="contenido_final">
             <div class="col-3" id="bock_click" data-target="contenido-3">
                 <h3>DISEÑO DE INTERACCIÓN<span class="triangulo"></span></h3>
             </div>
             <div class="col-9">
-                <p>Enfocándose en la relación e interacción de usuario y producto,
-                    el diseño de interacción dispone experiencias digitales
-                    que se concentran en ser eficientes e intuitivas.</p>
+                <p>Enfocándose en la relación e interacción de usuario y producto, el diseño de
+                     interacción dispone experiencias digitales que se concentran en ser eficientes e intuitivas.</p>
             </div>
         </div>
         <!-- Contenido oculto aquí -->
