implementación de catastro Herbert

--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -327,6 +327,14 @@
         <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo72"></div>
             <div class="loader-container"></div> 
         </div>
+        <h2>CATASTRO DE PATRONES</h2>
+        <div class="parent-container">
+        <div class="containerpatterns">
+            <h3><a href="catastrodepatrones/index.html" class="link-sin-estilo">LEER MÁS</a></h3>
+        </div>   
+      </div> 
+    </div>
+
     </main>
     <!-- footer  -->
     <div id="footer"></div>
