--- a/investigacióndeusuario.html
+++ b/investigacióndeusuario.html
@@ -27,6 +27,7 @@
         <!-- cuadro principal -->
         <div class="rectangulopestaña"></div>
         <div class="container justify-content-between" id="container_principal"> 
+            <a href="index.html" class="close-button">x</a>
             <div class="container-fluid" id="container_descripcion">
                 <h1>INVESTIGACIÓN DE USUARIO</h1>
                 <p>En el ámbito de la experiencia de usuario (UX), se desarrollan diversos procesos que contribuyen a los diseños finales 
