--- a/que_buscamos.html
+++ b/que_buscamos.html
@@ -25,7 +25,8 @@
     
     <main class="main">
         <div class="rectangulopestaña"></div>
-        <div class="contaniner justify-content-between" id="container_principal">
+        <div class="container justify-content-between" id="container_principal"> 
+            <a href="index.html" class="close-button">x</a>
             <div class="container">
                 <h1>QUIÉNES SOMOS</h1>
                 <p>Somos ArchivaDOCS, una oficina de Diseño enfocada en las áreas de 
