--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -28,22 +28,25 @@
         <!-- cuadro principal -->
         <div class="rectangulopestaña"></div>
         <div class="container justify-content-between" id="container_principal"> 
+            <a href="index.html" class="close-button">x</a>
             <!-- descripcion -->
             <div class="container" id="container_titulo">
                 <h1>TIPOS DE DISEÑO</h1>
                 <p>Los diferentes diseños expuestos y utilizados en la sociedad,
-                       se desarrollan de acuerdo a problemáticas y observaciones que van surgiendo y que a través de procesos
-                       y cualidades distintivas, es que estos son funcionales y capaces de desenvolverse en ambientes donde
-                       estos son adaptables de acuerdo al contexto por el cual fue solicitado. Dentro de los contextos a considerar,
-                       el diseño se desenvuelve en diferentes áreas o “tipos”.
+                     se desarrollan de acuerdo a problemáticas y observaciones que
+                      van surgiendo y que a través de procesos y cualidades distintivas,
+                       es que estos son funcionales y capaces de desenvolverse en
+                        ambientes donde estos son adaptables de acuerdo al contexto
+                         por el cual fue solicitado. Dentro de los contextos a considerar,
+                          el diseño se desenvuelve en diferentes áreas o “tipos”:
                 </p>
             </div>
         <!-- CATEGORÍAS -->        
-        <h2>ÁREAS</h2>
+        <h2 id="area">ÁREAS</h2>
         <!-- FILA 1 -->
         <div class="row container_doble d-flex">
             <div class="col-3" id="bock_click" data-target="contenido-1">
-                <h3>DISEÑO INDUSTRIAL<span class="triangulo"></span></h3>
+                <h3>DISEÑO</h3><h3>INDUSTRIAL<span class="triangulo"></span></h3>
             </div>
             <div class="col-9">
                 <p>Área del diseño focalizada en el desarrollo de objetos funcionales
@@ -56,9 +59,9 @@
             <div class="row">
                 <h2>DISEÑO INDUSTRIAL</h2>
                 <div class="col-5">
-                    <img src="img/3. Campo Laboral DISEÑO UX.png" id="imagen_industrial">
+                    <img src="img/Diseno_Industrial.png" id="imagen_industrial">
                 </div>
-                <div class="col-7 d-flex justify-content-center ali">
+                <div class="col-7 d-flex align-items-center justify-content-center">
                     <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
                         o productos funcionales donde su objetivo principal consiste en mejorar la calidad de vida y experiencia
                         a través de la innovación y satisfacción respecto a las necesidades específicas dentro de diversos contextos,
@@ -71,7 +74,7 @@
         <!-- FILA 2 -->
         <div class="row container_doble">
             <div class="col-3" id="bock_click" data-target="contenido-2">
-                <h3>DISEÑO GRÁFICO<span class="triangulo"></span></h3>
+                <h3>DISEÑO</h3><h3>GRÁFICO<span class="triangulo"></span></h3>
             </div>
             <div class="col-9">
                 <p>Como extensión del lenguaje, el diseño gráfico por medio de elementos construidos en base a relaciones,
@@ -97,9 +100,9 @@
         </div>
         
         <!-- FILA 3 -->
-        <div class="row container_doble" id="contenido_final">
+        <div class="row container_doble">
             <div class="col-3" id="bock_click" data-target="contenido-3">
-                <h3>DISEÑO DE INTERACCIÓN<span class="triangulo"></span></h3>
+                <h3>DISEÑO DE</h3><h3>INTERACCIÓN<span class="triangulo"></span></h3>
             </div>
             <div class="col-9">
                 <p>Enfocándose en la relación e interacción de usuario y producto, el diseño de
@@ -123,10 +126,9 @@
                 </div>
             </div>
         </div>
+        </div>
     </main>
     <!-- footer  -->
-    <div id="footer"></div>
-            <!-- footer  -->
     <div id="footer"></div>
 
     <!-- bootstrap -->
