--- a/campolaboral.html
+++ b/campolaboral.html
@@ -28,6 +28,7 @@
     <!-- cuadro principal -->
     <div class="rectangulopestaña"></div>
     <div class="container justify-content-between" id="container_principal"> 
+        <a href="index.html" class="close-button">x</a>
         <!-- descripcion -->
         <div class="container" id="descripcion">
             <h2>CAMPO LABORAL</h2>
