--- a/diseñouxyui.html
+++ b/diseñouxyui.html
@@ -26,6 +26,7 @@
     <!-- cuadro principal -->
     <div class="rectangulopestaña"></div>
     <div class="container justify-content-between" id="container_principal"> 
+        <a href="index.html" class="close-button">x</a>
         <!-- descripcion -->
         <div class="container" id="container_descripcion1">
                 <h1>DISEÑO UI</h1>
