--- a/patrones.html
+++ b/patrones.html
@@ -27,6 +27,8 @@
         <!-- cuadro principal -->
         <div class="rectangulopestaña"></div>
         <div class="container justify-content-between" id="container_principal"> 
+            <a href="index.html" class="close-button">x</a>
+            
             <div class="container-fluid" id="container_descripcion">
                 <h1>PATRONES</h1>
                 <p>Concepto aplicado por el arquitecto Cristopher Alexander para ser introducidos 
