--- a/complementos/oscurecimientoprivacidad.html
+++ b/complementos/oscurecimientoprivacidad.html
@@ -67,7 +67,13 @@
                 <li>Rellena el formulario de cancelación y confirma tu decisión.</li>
             </ol>
             <p>Si encuentras dificultades o necesitas ayuda, por favor contáctanos <a href="#" id="showInfo">aquí</a>.</p>
-            <button id="showConsentPopup">Mostrar Ventana Emergente</button>
+            <form action="#" method="post">
+                <label for="email">Ingrese su dirección de correo electrónico:</label><br>
+                <input type="email" id="email" name="email" style="margin-bottom: 10px;"><br>
+                <label for="password">Cree una contraseña:</label><br>
+                <input type="password" id="password" name="password" style="margin-bottom: 10px;"><br>
+            </form>
+            <button id="showConsentPopup">Iniciar Sesión</button>
         </div>
         <!-- Fin del ejemplo -->
 
