--- a/campolaboral.html
+++ b/campolaboral.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <!-- nav barra -->
-    <div id="nav"></div>
+    <div id="nav2"></div>
     <main class="main">
     <!-- cuadro principal -->
     <div class="rectangulopestaña"></div>
